Fix issue of some items in the layer tree overflowing
Relates: #737

--- a/css/bootstrap.scss
+++ b/css/bootstrap.scss
@@ -88,6 +88,11 @@
     padding: 3px 20px;
 }
 
+// Partially overwrite rule to prevent overflows
+.dropdown-item {
+    white-space: normal;
+}
+
 // Overwrite default color to mimic old bootstrap style
 .btn-outline-default {
     color: #333;
